Added api and return values for User/UserController
