# api/src/main/resources/public/api.yaml
@@ -343,6 +343,136 @@ paths:
           description: id not found
         '500':
           $ref: '#/components/responses/ServerError'
+  /user:
+    post:
+      tags:
+        - user
+      summary: post user
+      description: creates a user
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
+      responses:
+        '201':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+    get:
+      tags:
+        - user
+      summary: gets all users
+      description: gets all the users
+      operationId: getUsers
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/ServerError'
+  /user/{userId}:
+    parameters:
+      - in: path
+        name: userId
+        schema:
+          type: integer
+        required: true
+    get:
+      tags:
+        - user
+      summary: get specific user
+      description: retrieves a specific user based on its id
+      operationId: getUser
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: Id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
+    delete:
+      tags:
+        - user
+      summary: deletes specific user
+      description: deletes a specific user based on its id
+      operationId: deleteUser
+
+      responses:
+        '204':
+          description: Deleted
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
+    patch:
+      tags:
+        - user
+      summary: updates a user properties
+      description: updates a user properties
+      operationId: patchUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDTO"
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          description: id not found
+        '500':
+          $ref: '#/components/responses/ServerError'
 
 
 components:
@@ -459,14 +589,10 @@ components:
           type: integer
           format: int32
           description: id of the rental
-        userId:
-          type: integer
-          format: int32
-          description: id of the user
-        carId:
-          type: integer
-          format: int32
-          description: id of the car
+        user:
+          $ref: "#/components/schemas/UserDTO"
+        car:
+          $ref: "#/components/schemas/CarDTO"
         startDateTime:
           type: string
           format: date-time
@@ -479,3 +605,38 @@ components:
           type: string
           enum: [ "ACTIVE", "CANCELLED" ]
           description: the status of the rental
+    UserDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: id of the user
+        email:
+          type: string
+          format: email
+          description: email of the user
+        password:
+          type: string
+          format: password
+          description: password of the user
+        userName:
+          type: string
+          description: username of the user
+        firstName:
+          type: string
+          description: first name of the user
+        lastName:
+          type: string
+          description: last name of the user
+        countryOfResidence:
+          type: string
+          description: country of residence of the user
+        driverLicenseNumber:
+          type: string
+          description: driver license number of the user
+        status:
+          type: string
+          enum: [ "ACTIVE", "DELETED" ]
+          description: the status of the user
+
